--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cinemascope",
-  "homepage": "https://sakiev24.github.io/cinemascope",
+  "homepage": "https://sakiev24.github.io/cinemascope/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
